# bibi

./: Cargo.toml  README.md
bibi/: Cargo.toml
bibi-js/: Cargo.toml
bibi-js/src/: lib.rs
bibi/src/bbcode/: read.rs
src/: bbcode.rs  lib.rs  main.rs  writefmt.rs
src/bbcode/: mod.rs  read.rs  write.rs
