[package]
name = "bibi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
lazy_static = "1.4.0"
pulldown-cmark = "0.9.2"
regex = "1.7.1"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
