[package]
name = "bibi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.14", features = ["derive"] }
itertools = "0.10.5"
lazy_static = "1.4.0"
nom = "7.1.3"
num = "0.4.0"
numerals = "0.1.4"
pulldown-cmark = "0.9.2"
regex = "1.7.3"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
